feat: unique story thumbnails and UI improvements
